# zketch-v11

./: CMakeLists.txt  LICENSE  README.md  compile_flags.txt  makefile
.cache/clangd/index/: temp.cpp.3206985129ECF6EB.idx  temp.cpp.4B58C160AA644A21.idx  zanim.h.8EEC46804CA75963.idx  zbitmap.h.3A03228F0C292929.idx  zbitmap.h.759FDA9EB50E527F.idx  zbitmap_impl.cpp.1E769DB35948457A.idx  zbitmap_impl.cpp.3F07873023A50E23.idx  zdef.h.4E48333247451A20.idx  zdef.h.796FBA19C91EA17B.idx  zdef_impl.cpp.51EDDEBA79C7CFBF.idx  zdrawer.h.B12967F29BFA08BE.idx  zdrawer.h.CAA1F65ADFD3A724.idx  zdrawer_impl.cpp.297F0123AE2219C6.idx  zdrawer_impl.cpp.E84A8621BC1A5E7A.idx  zenums.h.548D42C3E7500581.idx  zevent.h.2A8750AD7F279B04.idx  zevent.h.BCE53BEEFE400668.idx  zevent_impl.cpp.A99D2EC289C90F73.idx  zevent_impl.cpp.E32C20EE8AE62A07.idx  zfont.h.88E5BBC0E4D85242.idx  zgdiplusinit.h.1C6339C5799E7722.idx  zgdiplusinit.h.3134D575029E266B.idx  zinput.h.59BB6BFCBD926397.idx  zlog.h.2DB7BC8BE48EDD59.idx  ztexture.h.DCD32F04F4AFD695.idx  ztimer.h.83DFCAA7F82205C1.idx  ztimer.h.ED402F3E16BB3264.idx  zunit.h.2349779CDCA972E1.idx  zunit.h.38F329A8A6CBB6FF.idx  zunit_impl.cpp.0B01130EC8C223F9.idx  zunit_impl.cpp.A83F25D082E596F5.idx  zwindow.h.8B02700CD4F55890.idx  zwindow.h.E7C71C476E344670.idx  zwindow_impl.cpp.2A7CE42C7988167B.idx
includes/: zanim.h  zbitmap.h  zbitmapimpl.h  zdef.h  zdrawer.h  zdrawerimpl.h  zenums.h  zevent.h  zeventimpl.h  zfont.h  zgdiplusinit.h  zinput.h  zlog.h  zregistry.h  ztexture.h  ztimer.h  zunit.h  zwindow.h
includes/impl/: zbitmap_impl.cpp  zdrawer_impl.cpp  zevent_impl.cpp  zunit_impl.cpp
src/: cmp.py  temp.cpp  zbitmap_impl.cpp  zdef_impl.cpp  zdrawer_impl.cpp  zevent_impl.cpp  zunit_impl.cpp  zwindow_impl.cpp
